Fix some problems on mobile devices in forum.php

--- a/style/_components/footer.scss
+++ b/style/_components/footer.scss
@@ -151,7 +151,7 @@
         display: flex;
         flex-direction: column;
         @include mobile {
-            flex-direction: row;
+            margin: 0 auto 10px;
         }
     }
 
